Går over til å bruke permisjoner fra register/input i staden for bekr… (#3049)
* Går over til å bruke permisjoner fra register/input i staden for bekreftet permisjon

* Tar hensyn til permisjoner med over 14 dager varighet og som ikkje sammenfaller med ytelseperiode

* TSF-2620 Refusjons skal ikkje utbetales i perioder med sammenhengede permisjon over 14 dager

* Legger til sjekk på om SVP sammenfaller med foreldrepermisjon

* Slår sammen mapping av beregningsaktiviteter for k9 og fp

* K9-ytelser beregnes ved dagen før skjæringstidspunktet slik som SVP og FP